--- a/mainpage.html
+++ b/mainpage.html
@@ -7,14 +7,24 @@
   <title>Reservia</title>
   <meta name="description" content="Reservia">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <script src="https://kit.fontawesome.com/fc126c8c18.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
+    <header>
     <div class="topnav">
         <a class="hebergement" href="#hebergement">Hebergement</a>
         <a href="#activite">Activité</a>
         <a href="#subscribe">S'inscrire</a>
-      </div>
+    </div>
+    </header>
+    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+    <p>En pleins centre ville ou en pleine nature</p>
+    <i class="fas fa-map-marker-alt"></i>
+    <input type="search" id="search" name="search"
+       aria-label="Marseille, France">
+
+<button>Rechercher</button>
 </body>
 </html>
