--- a/mainpage.html
+++ b/mainpage.html
@@ -13,18 +13,40 @@
 
 <body>
     <header>
-    <div class="topnav">
-        <a class="hebergement" href="#hebergement">Hebergement</a>
-        <a href="#activite">Activité</a>
-        <a href="#subscribe">S'inscrire</a>
-    </div>
+        <div class="topnav">
+            <a href="#hebergement">Hebergement</a>
+            <a href="#activite">Activité</a>
+            <a href="#subscribe">S'inscrire</a>
+        </div>
     </header>
-    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-    <p>En pleins centre ville ou en pleine nature</p>
-    <i class="fas fa-map-marker-alt"></i>
-    <input type="search" id="search" name="search"
-       aria-label="Marseille, France">
 
-<button>Rechercher</button>
+    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+     <p>En pleins centre ville ou en pleine nature</p>
+    <div class="searchbar">
+        <i class="fas fa-map-marker-alt"></i>
+        <input type="search" id="search" name="search" placeholder="Marseille, France">
+
+        <button>Rechercher</button>
+    </div>
+
+<p>Filtres</p>
+
+<button class="btn"><i class="fas fa-money-bill-wave"></i>Économique</button>
+<button class="btn"><i class="fas fa-child"></i>Familial</button>
+<button class="btn"><i class="fas fa-heart"></i>Romantique</button>
+<button class="btn"><i class="fas fa-dog"></i>Économique</button>
+
+<div class="attention">
+    <i class="fas fa-info-circle"> Plus de 500 logements sont disponibles dans cette ville</i>
+</div>
+
+<section>
+    <h1>Hébergement à Marseille</h1>
+    <a href="img/medium/aubergelepanier_medium.jpg"><img src="img/small/aubergecannebiere_small.jpg" alt="Photo d'identité Mathieu Nebra" /></a>
+    <p>Auberge la Cannebière <br/>
+        Nuit à partir de 25€
+    </p>
+</section>
+
 </body>
 </html>
