--- a/mainpage.html
+++ b/mainpage.html
@@ -42,10 +42,19 @@
 
 <section>
     <h1>Hébergement à Marseille</h1>
-    <a href="img/medium/aubergecannebiere_medium.jpg"><img src="img/small/aubergecannebiere_small.jpg" alt="Photo d'identité Mathieu Nebra" /></a>
-    <p>Auberge la Cannebière <br/>
+
+    <div class="hotelresult">
+        <a href="img/medium/aubergecannebiere_medium.jpg" target="_blank"><img src="img/small/aubergecannebiere_small.jpg" alt="Auberge de la Cannebière" /></a>
+        <p>Auberge la Cannebière <br/>
         Nuit à partir de 25€
-    </p>
+        </p>
+    </div>
+    <div class="hotelresult">
+        <a href="img/medium/hotelduport_medium.jpg" target="_blank"><img src="img/small/hotelduport.jpg" alt="Hôtel du port" /></a>
+        <p>Hôtel du port <br/>
+        Nuit à partir de 52€
+        </p>
+    </div>
 </section>
 
 </body>
