--- a/mainpage.html
+++ b/mainpage.html
@@ -50,7 +50,7 @@
         </p>
     </div>
     <div class="hotelresult">
-        <a href="img/medium/hotelduport_medium.jpg" target="_blank"><img src="img/small/hotelduport.jpg" alt="Hôtel du port" /></a>
+        <a href="img/medium/hotelduport_medium.jpg" target="_blank"><img src="img/small/hotelduport_small.jpg" alt="Hôtel du port" /></a>
         <p>Hôtel du port <br/>
         Nuit à partir de 52€
         </p>
