--- a/mainpage.html
+++ b/mainpage.html
@@ -55,6 +55,31 @@
         Nuit à partir de 52€
         </p>
     </div>
+    <div class="hotelresult">
+        <a href="img/medium/hotellesmouettes_medium.jpg" target="_blank"><img src="img/small/hotellesmouettes_small.jpg" alt="Hôtel les mouettes" /></a>
+        <p>Hôtel les mouettes <br/>
+        Nuit à partir de 76€
+        </p>
+    </div>
+    <div class="hotelresult">
+        <a href="img/medium/hoteldelamer_medium.jpg" target="_blank"><img src="img/small/hoteldelamer_small.jpg" alt="Hôtel de la mer" /></a>
+        <p>Hôtel la mer <br/>
+        Nuit à partir de 46€
+        </p>
+    </div>
+    <div class="hotelresult">
+        <a href="img/medium/aubergelepanier_medium.jpg" target="_blank"><img src="img/small/aubergelepanier_small.jpg" alt="Auberge Le Panier" /></a>
+        <p>Auberge Le Panier <br/>
+        Nuit à partir de 23€
+        </p>
+    </div>
+    <div class="hotelresult">
+        <a href="img/medium/hotelchezamina_medium.jpg" target="_blank"><img src="img/small/hotelchezamina_small.jpg" alt="Hôtel chez Amina" /></a>
+        <p>Hôtel chez Amina <br/>
+        Nuit à partir de 96€
+        </p>
+    </div>
+    <button>Afficher plus</button>
 </section>
 
 </body>
