--- a/mainpage.html
+++ b/mainpage.html
@@ -79,8 +79,30 @@
         Nuit à partir de 96€
         </p>
     </div>
-    <button>Afficher plus</button>
+    <a href="#">Afficher plus</a>
 </section>
-
+<footer>
+    <table>
+        <tr>
+            <th>A propos</th>
+            <th>Nos hébergements</th>
+            <th>Assistance</th>
+        </tr>
+     
+        <tr>
+            <td>Fonctionnement du site</td>
+            <td>Charte qualité</td>
+            <td>Centre d'aide</td>
+        </tr>
+        <tr>
+            <td>Condition générales de vente</td>
+            <td>Soumettre votre hôtel</td>
+            <td>Nous contacter</td>
+        </tr>
+        <tr>
+            <td>Données et Confidentialité</td>
+        </tr>
+     </table>
+</footer>
 </body>
 </html>
