--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,7 @@
 
   <title>Reservia</title>
   <meta name="description" content="Reservia">
-  <link rel="stylesheet" href="css/styles.css>
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
   <script src="https://kit.fontawesome.com/fc126c8c18.js" crossorigin="anonymous"></script>
 
 </head>
