--- a/mainpage.html
+++ b/mainpage.html
@@ -1,108 +1,109 @@
 <!doctype html>
 
 <html lang="fr">
-<head>
-  <meta charset="utf-8">
 
-  <title>Reservia</title>
-  <meta name="description" content="Reservia">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-  <script src="https://kit.fontawesome.com/fc126c8c18.js" crossorigin="anonymous"></script>
+<head>
+    <meta charset="utf-8">
+
+    <title>Reservia</title>
+    <meta name="description" content="Reservia">
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <script src="https://kit.fontawesome.com/fc126c8c18.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
     <header>
-        <div class="topnav">
+        <nav class="topnav">
             <a href="#hebergement">Hebergement</a>
             <a href="#activite">Activité</a>
             <a href="#subscribe">S'inscrire</a>
-        </div>
+        </nav>
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <p>En pleins centre ville ou en pleine nature</p>
     </header>
 
-    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-     <p>En pleins centre ville ou en pleine nature</p>
-    <div class="searchbar">
-        <i class="fas fa-map-marker-alt"></i>
-        <input type="search" id="search" name="search" placeholder="Marseille, France">
+    <section>
+        <div class="searchbar">
+            <i class="fas fa-map-marker-alt"></i>
+            <input type="search" id="search" name="search" placeholder="Marseille, France">
 
-        <button>Rechercher</button>
-    </div>
+            <button>Rechercher</button>
+        </div>
 
-<p>Filtres</p>
+        <p>Filtres</p>
 
-<button class="btn"><i class="fas fa-money-bill-wave"></i>Économique</button>
-<button class="btn"><i class="fas fa-child"></i>Familial</button>
-<button class="btn"><i class="fas fa-heart"></i>Romantique</button>
-<button class="btn"><i class="fas fa-dog"></i>Économique</button>
+        <button class="btn"><i class="fas fa-money-bill-wave"></i>Économique</button>
+        <button class="btn"><i class="fas fa-child"></i>Familial</button>
+        <button class="btn"><i class="fas fa-heart"></i>Romantique</button>
+        <button class="btn"><i class="fas fa-dog"></i>Économique</button>
 
-<div class="attention">
-    <i class="fas fa-info-circle"> Plus de 500 logements sont disponibles dans cette ville</i>
-</div>
+        <div class="attention">
+            <i class="fas fa-info-circle"> Plus de 500 logements sont disponibles dans cette ville</i>
+        </div>
+    </section>
 
-<section>
-    <h1>Hébergement à Marseille</h1>
+    <section>
+        <h1>Hébergement à Marseille</h1>
 
-    <div class="hotelresult">
-        <a href="img/medium/aubergecannebiere_medium.jpg" target="_blank"><img src="img/small/aubergecannebiere_small.jpg" alt="Auberge de la Cannebière" /></a>
-        <p>Auberge la Cannebière <br/>
-        Nuit à partir de 25€
-        </p>
-    </div>
-    <div class="hotelresult">
-        <a href="img/medium/hotelduport_medium.jpg" target="_blank"><img src="img/small/hotelduport_small.jpg" alt="Hôtel du port" /></a>
-        <p>Hôtel du port <br/>
-        Nuit à partir de 52€
-        </p>
-    </div>
-    <div class="hotelresult">
-        <a href="img/medium/hotellesmouettes_medium.jpg" target="_blank"><img src="img/small/hotellesmouettes_small.jpg" alt="Hôtel les mouettes" /></a>
-        <p>Hôtel les mouettes <br/>
-        Nuit à partir de 76€
-        </p>
-    </div>
-    <div class="hotelresult">
-        <a href="img/medium/hoteldelamer_medium.jpg" target="_blank"><img src="img/small/hoteldelamer_small.jpg" alt="Hôtel de la mer" /></a>
-        <p>Hôtel la mer <br/>
-        Nuit à partir de 46€
-        </p>
-    </div>
-    <div class="hotelresult">
-        <a href="img/medium/aubergelepanier_medium.jpg" target="_blank"><img src="img/small/aubergelepanier_small.jpg" alt="Auberge Le Panier" /></a>
-        <p>Auberge Le Panier <br/>
-        Nuit à partir de 23€
-        </p>
-    </div>
-    <div class="hotelresult">
-        <a href="img/medium/hotelchezamina_medium.jpg" target="_blank"><img src="img/small/hotelchezamina_small.jpg" alt="Hôtel chez Amina" /></a>
-        <p>Hôtel chez Amina <br/>
-        Nuit à partir de 96€
-        </p>
-    </div>
-    <a href="#">Afficher plus</a>
-</section>
-<footer>
-    <table>
-        <tr>
-            <th>A propos</th>
-            <th>Nos hébergements</th>
-            <th>Assistance</th>
-        </tr>
-     
-        <tr>
-            <td>Fonctionnement du site</td>
-            <td>Charte qualité</td>
-            <td>Centre d'aide</td>
-        </tr>
-        <tr>
-            <td>Condition générales de vente</td>
-            <td>Soumettre votre hôtel</td>
-            <td>Nous contacter</td>
-        </tr>
-        <tr>
-            <td>Données et Confidentialité</td>
-        </tr>
-     </table>
-</footer>
+        <div class="hotelresult">
+            <a href="img/medium/aubergecannebiere_medium.jpg" target="_blank"><img
+                    src="img/small/aubergecannebiere_small.jpg" alt="Auberge de la Cannebière" /></a>
+            <p>Auberge la Cannebière <br />
+                Nuit à partir de 25€
+            </p>
+        </div>
+        <div class="hotelresult">
+            <a href="img/medium/hotelduport_medium.jpg" target="_blank"><img src="img/small/hotelduport_small.jpg"
+                    alt="Hôtel du port" /></a>
+            <p>Hôtel du port <br />
+                Nuit à partir de 52€
+            </p>
+        </div>
+        <div class="hotelresult">
+            <a href="img/medium/hotellesmouettes_medium.jpg" target="_blank"><img
+                    src="img/small/hotellesmouettes_small.jpg" alt="Hôtel les mouettes" /></a>
+            <p>Hôtel les mouettes <br />
+                Nuit à partir de 76€
+            </p>
+        </div>
+        <div class="hotelresult">
+            <a href="img/medium/hoteldelamer_medium.jpg" target="_blank"><img src="img/small/hoteldelamer_small.jpg"
+                    alt="Hôtel de la mer" /></a>
+            <p>Hôtel la mer <br />
+                Nuit à partir de 46€
+            </p>
+        </div>
+        <div class="hotelresult">
+            <a href="img/medium/aubergelepanier_medium.jpg" target="_blank"><img
+                    src="img/small/aubergelepanier_small.jpg" alt="Auberge Le Panier" /></a>
+            <p>Auberge Le Panier <br />
+                Nuit à partir de 23€
+            </p>
+        </div>
+        <div class="hotelresult">
+            <a href="img/medium/hotelchezamina_medium.jpg" target="_blank"><img src="img/small/hotelchezamina_small.jpg"
+                    alt="Hôtel chez Amina" /></a>
+            <p>Hôtel chez Amina <br />
+                Nuit à partir de 96€
+            </p>
+        </div>
+        <a href="#">Afficher plus</a>
+    </section>
+    <footer>
+        <div>
+            <a href="#">A propos</a>
+            <a href="#">Nos hébergements</a>
+            <a href="#">Assistance</a>
+            <a href="#">Fonctionnement du site</a>
+            <a href="#">Charte qualité</a>
+            <a href="#">Centre d'aide</a>
+            <a href="#">Condition générales de vente</a>
+            <a href="#">Soumettre votre hôtel</a>
+            <a href="#">Nous contacter</a>
+            <a href="#">Données et Confidentialité</a>
+        </div>
+    </footer>
 </body>
+
 </html>
