--- a/mainpage.html
+++ b/mainpage.html
@@ -43,7 +43,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="center">
         <h1>Hébergement à Marseille</h1>
 
         <div class="hotelresult">
@@ -89,6 +89,31 @@
             </p>
         </div>
         <a href="#">Afficher plus</a>
+    </section>
+    <section class="rightside">
+        <h1>Les plus populaires</h1>
+
+        <div class="famous">
+            <a href="img/medium/hotellesoleildumatin_medium.jpg" target="_blank"><img
+                    src="img/small/hotellesoleildumatin_small.jpg" alt="Hôtel le soleil du matin" /></a>
+            <p>Hôtel le soleil du matin <br />
+                Nuit à partir de 128€
+            </p>
+        </div>
+        <div class="famous">
+            <a href="img/medium/aucoeurdeleau_medium.jpg" target="_blank"><img
+                    src="img/small/aucoeurdeleau_small.jpg" alt="Au coeur de l'eau Chambres d'hôtes" /></a>
+            <p>Au coeur de l'eau Chambres d'hôtes <br />
+                Nuit à partir de 71€
+            </p>
+        </div>
+        <div class="famous">
+            <a href="img/medium/hoteltoutbleuetblanc_medium.jpg" target="_blank"><img
+                    src="img/small/hoteltoutbleuetblanc_small.jpg" alt="Hôtel Tout bleu et Blanc" /></a>
+            <p>Hôtel Tout bleu et Blanc <br />
+                Nuit à partir de 68€
+            </p>
+        </div>
     </section>
     <footer>
         <div>
