--- a/mainpage.html
+++ b/mainpage.html
@@ -14,6 +14,7 @@
 
 <body>
     <header>
+        <img src="img/logo/Reservia.svg" alt="logo reservia">
         <nav class="topnav">
             <a href="#hebergement">Hebergement</a>
             <a href="#activite">Activité</a>
@@ -101,8 +102,8 @@
             </p>
         </div>
         <div class="famous">
-            <a href="img/medium/aucoeurdeleau_medium.jpg" target="_blank"><img
-                    src="img/small/aucoeurdeleau_small.jpg" alt="Au coeur de l'eau Chambres d'hôtes" /></a>
+            <a href="img/medium/aucoeurdeleau_medium.jpg" target="_blank"><img src="img/small/aucoeurdeleau_small.jpg"
+                    alt="Au coeur de l'eau Chambres d'hôtes" /></a>
             <p>Au coeur de l'eau Chambres d'hôtes <br />
                 Nuit à partir de 71€
             </p>
