--- a/mainpage.html
+++ b/mainpage.html
@@ -43,77 +43,112 @@
             <i class="fas fa-info-circle"> Plus de 500 logements sont disponibles dans cette ville</i>
         </div>
     </section>
+    <div class="mainbresult">
+        <section class="center">
+            <h1>Hébergement à Marseille</h1>
 
-    <section class="center">
-        <h1>Hébergement à Marseille</h1>
+            <div class="hotelresult">
+                <a href="img/medium/aubergecannebiere_medium.jpg" target="_blank"><img
+                        src="img/small/aubergecannebiere_small.jpg" alt="Auberge de la Cannebière" /></a>
+                <p>Auberge la Cannebière <br />
+                    Nuit à partir de 25€
+                </p>
+            </div>
+            <div class="hotelresult">
+                <a href="img/medium/hotelduport_medium.jpg" target="_blank"><img src="img/small/hotelduport_small.jpg"
+                        alt="Hôtel du port" /></a>
+                <p>Hôtel du port <br />
+                    Nuit à partir de 52€
+                </p>
+            </div>
+            <div class="hotelresult">
+                <a href="img/medium/hotellesmouettes_medium.jpg" target="_blank"><img
+                        src="img/small/hotellesmouettes_small.jpg" alt="Hôtel les mouettes" /></a>
+                <p>Hôtel les mouettes <br />
+                    Nuit à partir de 76€
+                </p>
+            </div>
+            <div class="hotelresult">
+                <a href="img/medium/hoteldelamer_medium.jpg" target="_blank"><img src="img/small/hoteldelamer_small.jpg"
+                        alt="Hôtel de la mer" /></a>
+                <p>Hôtel la mer <br />
+                    Nuit à partir de 46€
+                </p>
+            </div>
+            <div class="hotelresult">
+                <a href="img/medium/aubergelepanier_medium.jpg" target="_blank"><img
+                        src="img/small/aubergelepanier_small.jpg" alt="Auberge Le Panier" /></a>
+                <p>Auberge Le Panier <br />
+                    Nuit à partir de 23€
+                </p>
+            </div>
+            <div class="hotelresult">
+                <a href="img/medium/hotelchezamina_medium.jpg" target="_blank"><img
+                        src="img/small/hotelchezamina_small.jpg" alt="Hôtel chez Amina" /></a>
+                <p>Hôtel chez Amina <br />
+                    Nuit à partir de 96€
+                </p>
+            </div>
+            <a href="#">Afficher plus</a>
+        </section>
+        <section class="rightside">
+            <h1>Les plus populaires</h1>
 
-        <div class="hotelresult">
-            <a href="img/medium/aubergecannebiere_medium.jpg" target="_blank"><img
-                    src="img/small/aubergecannebiere_small.jpg" alt="Auberge de la Cannebière" /></a>
-            <p>Auberge la Cannebière <br />
-                Nuit à partir de 25€
-            </p>
-        </div>
-        <div class="hotelresult">
-            <a href="img/medium/hotelduport_medium.jpg" target="_blank"><img src="img/small/hotelduport_small.jpg"
-                    alt="Hôtel du port" /></a>
-            <p>Hôtel du port <br />
-                Nuit à partir de 52€
-            </p>
-        </div>
-        <div class="hotelresult">
-            <a href="img/medium/hotellesmouettes_medium.jpg" target="_blank"><img
-                    src="img/small/hotellesmouettes_small.jpg" alt="Hôtel les mouettes" /></a>
-            <p>Hôtel les mouettes <br />
-                Nuit à partir de 76€
-            </p>
-        </div>
-        <div class="hotelresult">
-            <a href="img/medium/hoteldelamer_medium.jpg" target="_blank"><img src="img/small/hoteldelamer_small.jpg"
-                    alt="Hôtel de la mer" /></a>
-            <p>Hôtel la mer <br />
-                Nuit à partir de 46€
-            </p>
-        </div>
-        <div class="hotelresult">
-            <a href="img/medium/aubergelepanier_medium.jpg" target="_blank"><img
-                    src="img/small/aubergelepanier_small.jpg" alt="Auberge Le Panier" /></a>
-            <p>Auberge Le Panier <br />
-                Nuit à partir de 23€
-            </p>
-        </div>
-        <div class="hotelresult">
-            <a href="img/medium/hotelchezamina_medium.jpg" target="_blank"><img src="img/small/hotelchezamina_small.jpg"
-                    alt="Hôtel chez Amina" /></a>
-            <p>Hôtel chez Amina <br />
-                Nuit à partir de 96€
-            </p>
-        </div>
-        <a href="#">Afficher plus</a>
-    </section>
-    <section class="rightside">
-        <h1>Les plus populaires</h1>
+            <div class="famous">
+                <a href="img/medium/hotellesoleildumatin_medium.jpg" target="_blank"><img
+                        src="img/small/hotellesoleildumatin_small.jpg" alt="Hôtel le soleil du matin" /></a>
+                <p>Hôtel le soleil du matin <br />
+                    Nuit à partir de 128€
+                </p>
+            </div>
+            <div class="famous">
+                <a href="img/medium/aucoeurdeleau_medium.jpg" target="_blank"><img
+                        src="img/small/aucoeurdeleau_small.jpg" alt="Au coeur de l'eau Chambres d'hôtes" /></a>
+                <p>Au coeur de l'eau Chambres d'hôtes <br />
+                    Nuit à partir de 71€
+                </p>
+            </div>
+            <div class="famous">
+                <a href="img/medium/hoteltoutbleuetblanc_medium.jpg" target="_blank"><img
+                        src="img/small/hoteltoutbleuetblanc_small.jpg" alt="Hôtel Tout bleu et Blanc" /></a>
+                <p>Hôtel Tout bleu et Blanc <br />
+                    Nuit à partir de 68€
+                </p>
+            </div>
+        </section>
+    </div>
+    <section class="bottom">
+        <h1>Activités à Marseille</h1>
 
-        <div class="famous">
-            <a href="img/medium/hotellesoleildumatin_medium.jpg" target="_blank"><img
-                    src="img/small/hotellesoleildumatin_small.jpg" alt="Hôtel le soleil du matin" /></a>
-            <p>Hôtel le soleil du matin <br />
-                Nuit à partir de 128€
-            </p>
+        <div class="activiteresult">
+            <a href="img/medium/vieuxport_medium.jpg" target="_blank"><img
+                    src="img/small/vieuxport_small.jpg" alt="Vieux Port" /></a>
+            <p>Vieux Port</p>
         </div>
-        <div class="famous">
-            <a href="img/medium/aucoeurdeleau_medium.jpg" target="_blank"><img src="img/small/aucoeurdeleau_small.jpg"
-                    alt="Au coeur de l'eau Chambres d'hôtes" /></a>
-            <p>Au coeur de l'eau Chambres d'hôtes <br />
-                Nuit à partir de 71€
-            </p>
+        <div class="activiteresult">
+            <a href="img/medium/fortdepomegues_medium.jpg" target="_blank"><img
+                    src="img/small/fortdepomegues_small.jpg" alt="Fort de Pomègues" /></a>
+            <p>Fort de Pomègues</p>
         </div>
-        <div class="famous">
-            <a href="img/medium/hoteltoutbleuetblanc_medium.jpg" target="_blank"><img
-                    src="img/small/hoteltoutbleuetblanc_small.jpg" alt="Hôtel Tout bleu et Blanc" /></a>
-            <p>Hôtel Tout bleu et Blanc <br />
-                Nuit à partir de 68€
-            </p>
+        <div class="activiteresult">
+            <a href="img/medium/ilesdufrioul_medium.jpg" target="_blank"><img
+                    src="img/small/ilesdufrioul_small.jpg" alt="Îles du Frioul" /></a>
+            <p>Îles du Frioul</p>
+        </div>
+        <div class="activiteresult">
+            <a href="img/medium/parcnational_medium.jpg" target="_blank"><img
+                    src="img/small/parcnational_small.jpg" alt="Parc National des Calanques" /></a>
+            <p>Parc National des Calanques</p>
+        </div>
+        <div class="activiteresult">
+            <a href="img/medium/notredame_medium.jpg" target="_blank"><img
+                    src="img/small/notredame_small.jpg" alt="Notre-Dame-de-la-Garde" /></a>
+            <p>Notre-Dame-de-la-Garde</p>
+        </div>
+        <div class="activiteresult">
+            <a href="img/medium/parclongchamp_medium.jpg" target="_blank"><img
+                    src="img/small/parclongchamp_small.jpg" alt="Parc Longchamp" /></a>
+            <p>Parc Longchamp</p>
         </div>
     </section>
     <footer>
