--- a/mainpage.html
+++ b/mainpage.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <img src="img/logo/Reservia.svg" alt="logo reservia">
 
     <title>Reservia</title>
     <meta name="description" content="Reservia">
