--- a/mainpage.html
+++ b/mainpage.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/logo/Reservia.png">
+    <link rel="icon" type="image/png" sizes="" href="img/logo/Reservia.png">
 
     <title>Reservia</title>
     <meta name="description" content="Reservia">
