--- a/mainpage.html
+++ b/mainpage.html
@@ -8,7 +8,7 @@
 
     <title>Reservia</title>
     <meta name="description" content="Reservia">
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/fc126c8c18.js" crossorigin="anonymous"></script>
 
 </head>
