--- a/mainpage.html
+++ b/mainpage.html
@@ -9,6 +9,8 @@
     <title>Reservia</title>
     <meta name="description" content="Reservia">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fc126c8c18.js" crossorigin="anonymous"></script>
 
 </head>
