--- a/mainpage.html
+++ b/mainpage.html
@@ -17,11 +17,13 @@
 
 <body>
     <header>
-        <img src="img/logo/Reservia.svg" alt="logo reservia">
         <nav class="topnav">
-            <a href="#hebergement">Hebergement</a>
-            <a href="#activite">Activité</a>
-            <a href="#subscribe">S'inscrire</a>
+            <img src="img/logo/Reservia.svg" alt="logo reservia">
+            <ul>
+                <li><a href="#hebergement">Hebergement</a></li>
+                <li><a href="#activite">Activité</a></li>
+                <li><a href="#subscribe">S'inscrire</a></li>
+            </ul>
         </nav>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En pleins centre ville ou en pleine nature</p>
