--- a/mainpage.html
+++ b/mainpage.html
@@ -19,11 +19,11 @@
     <header>
         <nav class="topnav">
             <img src="img/logo/Reservia.svg" alt="logo reservia">
-            <ul>
-                <li><a href="#hebergement">Hebergement</a></li>
-                <li><a href="#activite">Activité</a></li>
-                <li><a href="#subscribe">S'inscrire</a></li>
-            </ul>
+
+            <a href="#hebergement">Hebergement</a>
+            <a href="#activite">Activité</a>
+            <a href="#subscribe">S'inscrire</a>
+
         </nav>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En pleins centre ville ou en pleine nature</p>
