--- a/mainpage.html
+++ b/mainpage.html
@@ -17,14 +17,18 @@
 
 <body>
     <header>
-        <nav class="topnav">
-            <img src="img/logo/Reservia.svg" alt="logo reservia">
-
-            <a href="#hebergement">Hebergement</a>
-            <a href="#activite">Activité</a>
-            <a href="#subscribe">S'inscrire</a>
-
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <img src="img/logo/Reservia.svg" alt="logo reservia">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#hebergement">Hebergement</a></li>
+                    <li><a href="#activite">Activité</a></li>
+                    <li><a href="#subscribe">S'inscrire</a></li>
+                </ul>
+            </nav>
+        </div>
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En pleins centre ville ou en pleine nature</p>
     </header>
