--- a/mainpage.html
+++ b/mainpage.html
@@ -1,181 +1,222 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="fr">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <link rel="icon" type="image/png" href="img/logo/favicon.ico" />
 
     <title>Reservia</title>
-    <meta name="description" content="Reservia">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/fc126c8c18.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Reservia" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/fc126c8c18.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="img/logo/Reservia.svg" alt="logo reservia">
+          <div class="header">
+            <img src="img/logo/Reservia.svg" class="logo" alt="Reservia">
+            <div class="header-right">
+              <a class="active" href="#hebergements">Hébergements</a>
+              <a href="#activite">Activités</a>
+              <a class="subscribe" href="#sinscrire">S'inscrire</a>
             </div>
-            <nav>
-                <ul>
-                    <li class= "subscribe"><a href="#subscribe">S'inscrire</a></li>
-                    <li><a href="#hebergement">Hebergement</a></li>
-                    <li><a href="#activite">Activité</a></li>
-                </ul>
-            </nav>
-        </div>
-        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-        <p>En pleins centre ville ou en pleine nature</p>
+          </div>
+      <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+      <p>En pleins centre ville ou en pleine nature</p>
     </header>
 
     <section>
-            <div class="search">
-                <i class="fas fa-map-marker-alt"></i>
+      <div class="search">
+        <i class="fas fa-map-marker-alt"></i>
 
-               <input type="text" class="searchTerm" placeholder="Marseille, France">
-               <button type="submit" class="searchButton">
-                Rechercher
-               </button>
-            </div>
-
-        <p class="filter" >Filtres</p>
+        <input type="text" class="searchTerm" placeholder="Marseille, France" />
+        <button type="submit" class="searchButton">Rechercher</button>
+      </div>
+      <div class="contenairbtn">
+        <p>Filtres</p>
 
         <button class="btn"><i class="fas fa-money-bill-wave"></i>Économique</button>
         <button class="btn"><i class="fas fa-child"></i>Familial</button>
         <button class="btn"><i class="fas fa-heart"></i>Romantique</button>
         <button class="btn"><i class="fas fa-dog"></i>Économique</button>
-
-        <div class="attention">
-            <i class="fas fa-info-circle"> Plus de 500 logements sont disponibles dans cette ville</i>
-        </div>
+      </div>
+      <div class="attention">
+        <i class="fas fa-info-circle">
+          Plus de 500 logements sont disponibles dans cette ville</i
+        >
+      </div>
     </section>
     <div class="mainbresult">
-        <section class="center">
-            <h1>Hébergement à Marseille</h1>
+      <section class="center">
+        <h1>Hébergement à Marseille</h1>
 
-            <div class="hotelresult">
-                <a href="img/medium/aubergecannebiere_medium.jpg" target="_blank"><img
-                        src="img/small/aubergecannebiere_small.jpg" alt="Auberge de la Cannebière" /></a>
-                <p>Auberge la Cannebière <br />
-                    Nuit à partir de 25€
-                </p>
-            </div>
-            <div class="hotelresult">
-                <a href="img/medium/hotelduport_medium.jpg" target="_blank"><img src="img/small/hotelduport_small.jpg"
-                        alt="Hôtel du port" /></a>
-                <p>Hôtel du port <br />
-                    Nuit à partir de 52€
-                </p>
-            </div>
-            <div class="hotelresult">
-                <a href="img/medium/hotellesmouettes_medium.jpg" target="_blank"><img
-                        src="img/small/hotellesmouettes_small.jpg" alt="Hôtel les mouettes" /></a>
-                <p>Hôtel les mouettes <br />
-                    Nuit à partir de 76€
-                </p>
-            </div>
-            <div class="hotelresult">
-                <a href="img/medium/hoteldelamer_medium.jpg" target="_blank"><img src="img/small/hoteldelamer_small.jpg"
-                        alt="Hôtel de la mer" /></a>
-                <p>Hôtel la mer <br />
-                    Nuit à partir de 46€
-                </p>
-            </div>
-            <div class="hotelresult">
-                <a href="img/medium/aubergelepanier_medium.jpg" target="_blank"><img
-                        src="img/small/aubergelepanier_small.jpg" alt="Auberge Le Panier" /></a>
-                <p>Auberge Le Panier <br />
-                    Nuit à partir de 23€
-                </p>
-            </div>
-            <div class="hotelresult">
-                <a href="img/medium/hotelchezamina_medium.jpg" target="_blank"><img
-                        src="img/small/hotelchezamina_small.jpg" alt="Hôtel chez Amina" /></a>
-                <p>Hôtel chez Amina <br />
-                    Nuit à partir de 96€
-                </p>
-            </div>
-            <a href="#">Afficher plus</a>
-        </section>
-        <section class="rightside">
-            <h1>Les plus populaires</h1>
+        <div class="hotelresult">
+          <a href="img/medium/aubergecannebiere_medium.jpg" target="_blank"
+            ><img
+              src="img/small/aubergecannebiere_small.jpg"
+              alt="Auberge de la Cannebière"
+          /></a>
+          <p>
+            Auberge la Cannebière <br />
+            Nuit à partir de 25€
+          </p>
+        </div>
+        <div class="hotelresult">
+          <a href="img/medium/hotelduport_medium.jpg" target="_blank"
+            ><img src="img/small/hotelduport_small.jpg" alt="Hôtel du port"
+          /></a>
+          <p>
+            Hôtel du port <br />
+            Nuit à partir de 52€
+          </p>
+        </div>
+        <div class="hotelresult">
+          <a href="img/medium/hotellesmouettes_medium.jpg" target="_blank"
+            ><img
+              src="img/small/hotellesmouettes_small.jpg"
+              alt="Hôtel les mouettes"
+          /></a>
+          <p>
+            Hôtel les mouettes <br />
+            Nuit à partir de 76€
+          </p>
+        </div>
+        <div class="hotelresult">
+          <a href="img/medium/hoteldelamer_medium.jpg" target="_blank"
+            ><img src="img/small/hoteldelamer_small.jpg" alt="Hôtel de la mer"
+          /></a>
+          <p>
+            Hôtel la mer <br />
+            Nuit à partir de 46€
+          </p>
+        </div>
+        <div class="hotelresult">
+          <a href="img/medium/aubergelepanier_medium.jpg" target="_blank"
+            ><img
+              src="img/small/aubergelepanier_small.jpg"
+              alt="Auberge Le Panier"
+          /></a>
+          <p>
+            Auberge Le Panier <br />
+            Nuit à partir de 23€
+          </p>
+        </div>
+        <div class="hotelresult">
+          <a href="img/medium/hotelchezamina_medium.jpg" target="_blank"
+            ><img
+              src="img/small/hotelchezamina_small.jpg"
+              alt="Hôtel chez Amina"
+          /></a>
+          <p>
+            Hôtel chez Amina <br />
+            Nuit à partir de 96€
+          </p>
+        </div>
+        <a href="#">Afficher plus</a>
+      </section>
+      <section class="rightside">
+        <h1>Les plus populaires</h1>
 
-            <div class="famous">
-                <a href="img/medium/hotellesoleildumatin_medium.jpg" target="_blank"><img
-                        src="img/small/hotellesoleildumatin_small.jpg" alt="Hôtel le soleil du matin" /></a>
-                <p>Hôtel le soleil du matin <br />
-                    Nuit à partir de 128€
-                </p>
-            </div>
-            <div class="famous">
-                <a href="img/medium/aucoeurdeleau_medium.jpg" target="_blank"><img
-                        src="img/small/aucoeurdeleau_small.jpg" alt="Au coeur de l'eau Chambres d'hôtes" /></a>
-                <p>Au coeur de l'eau Chambres d'hôtes <br />
-                    Nuit à partir de 71€
-                </p>
-            </div>
-            <div class="famous">
-                <a href="img/medium/hoteltoutbleuetblanc_medium.jpg" target="_blank"><img
-                        src="img/small/hoteltoutbleuetblanc_small.jpg" alt="Hôtel Tout bleu et Blanc" /></a>
-                <p>Hôtel Tout bleu et Blanc <br />
-                    Nuit à partir de 68€
-                </p>
-            </div>
-        </section>
+        <div class="famous">
+          <a href="img/medium/hotellesoleildumatin_medium.jpg" target="_blank"
+            ><img
+              src="img/small/hotellesoleildumatin_small.jpg"
+              alt="Hôtel le soleil du matin"
+          /></a>
+          <p>
+            Hôtel le soleil du matin <br />
+            Nuit à partir de 128€
+          </p>
+        </div>
+        <div class="famous">
+          <a href="img/medium/aucoeurdeleau_medium.jpg" target="_blank"
+            ><img
+              src="img/small/aucoeurdeleau_small.jpg"
+              alt="Au coeur de l'eau Chambres d'hôtes"
+          /></a>
+          <p>
+            Au coeur de l'eau Chambres d'hôtes <br />
+            Nuit à partir de 71€
+          </p>
+        </div>
+        <div class="famous">
+          <a href="img/medium/hoteltoutbleuetblanc_medium.jpg" target="_blank"
+            ><img
+              src="img/small/hoteltoutbleuetblanc_small.jpg"
+              alt="Hôtel Tout bleu et Blanc"
+          /></a>
+          <p>
+            Hôtel Tout bleu et Blanc <br />
+            Nuit à partir de 68€
+          </p>
+        </div>
+      </section>
     </div>
     <section class="bottom">
-        <h1>Activités à Marseille</h1>
+      <h1>Activités à Marseille</h1>
 
-        <div class="activiteresult">
-            <a href="img/medium/vieuxport_medium.jpg" target="_blank"><img src="img/small/vieuxport_small.jpg"
-                    alt="Vieux Port" /></a>
-            <p>Vieux Port</p>
-        </div>
-        <div class="activiteresult">
-            <a href="img/medium/fortdepomegues_medium.jpg" target="_blank"><img src="img/small/fortdepomegues_small.jpg"
-                    alt="Fort de Pomègues" /></a>
-            <p>Fort de Pomègues</p>
-        </div>
-        <div class="activiteresult">
-            <a href="img/medium/ilesdufrioul_medium.jpg" target="_blank"><img src="img/small/ilesdufrioul_small.jpg"
-                    alt="Îles du Frioul" /></a>
-            <p>Îles du Frioul</p>
-        </div>
-        <div class="activiteresult">
-            <a href="img/medium/parcnational_medium.jpg" target="_blank"><img src="img/small/parcnational_small.jpg"
-                    alt="Parc National des Calanques" /></a>
-            <p>Parc National des Calanques</p>
-        </div>
-        <div class="activiteresult">
-            <a href="img/medium/notredame_medium.jpg" target="_blank"><img src="img/small/notredame_small.jpg"
-                    alt="Notre-Dame-de-la-Garde" /></a>
-            <p>Notre-Dame-de-la-Garde</p>
-        </div>
-        <div class="activiteresult">
-            <a href="img/medium/parclongchamp_medium.jpg" target="_blank"><img src="img/small/parclongchamp_small.jpg"
-                    alt="Parc Longchamp" /></a>
-            <p>Parc Longchamp</p>
-        </div>
+      <div class="activiteresult">
+        <a href="img/medium/vieuxport_medium.jpg" target="_blank"
+          ><img src="img/small/vieuxport_small.jpg" alt="Vieux Port"
+        /></a>
+        <p>Vieux Port</p>
+      </div>
+      <div class="activiteresult">
+        <a href="img/medium/fortdepomegues_medium.jpg" target="_blank"
+          ><img src="img/small/fortdepomegues_small.jpg" alt="Fort de Pomègues"
+        /></a>
+        <p>Fort de Pomègues</p>
+      </div>
+      <div class="activiteresult">
+        <a href="img/medium/ilesdufrioul_medium.jpg" target="_blank"
+          ><img src="img/small/ilesdufrioul_small.jpg" alt="Îles du Frioul"
+        /></a>
+        <p>Îles du Frioul</p>
+      </div>
+      <div class="activiteresult">
+        <a href="img/medium/parcnational_medium.jpg" target="_blank"
+          ><img
+            src="img/small/parcnational_small.jpg"
+            alt="Parc National des Calanques"
+        /></a>
+        <p>Parc National des Calanques</p>
+      </div>
+      <div class="activiteresult">
+        <a href="img/medium/notredame_medium.jpg" target="_blank"
+          ><img
+            src="img/small/notredame_small.jpg"
+            alt="Notre-Dame-de-la-Garde"
+        /></a>
+        <p>Notre-Dame-de-la-Garde</p>
+      </div>
+      <div class="activiteresult">
+        <a href="img/medium/parclongchamp_medium.jpg" target="_blank"
+          ><img src="img/small/parclongchamp_small.jpg" alt="Parc Longchamp"
+        /></a>
+        <p>Parc Longchamp</p>
+      </div>
     </section>
     <footer>
-        <div>
-            <a href="#">A propos</a>
-            <a href="#">Nos hébergements</a>
-            <a href="#">Assistance</a>
-            <a href="#">Fonctionnement du site</a>
-            <a href="#">Charte qualité</a>
-            <a href="#">Centre d'aide</a>
-            <a href="#">Condition générales de vente</a>
-            <a href="#">Soumettre votre hôtel</a>
-            <a href="#">Nous contacter</a>
-            <a href="#">Données et Confidentialité</a>
-        </div>
+      <div>
+        <a href="#">A propos</a>
+        <a href="#">Nos hébergements</a>
+        <a href="#">Assistance</a>
+        <a href="#">Fonctionnement du site</a>
+        <a href="#">Charte qualité</a>
+        <a href="#">Centre d'aide</a>
+        <a href="#">Condition générales de vente</a>
+        <a href="#">Soumettre votre hôtel</a>
+        <a href="#">Nous contacter</a>
+        <a href="#">Données et Confidentialité</a>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
