--- a/mainpage.html
+++ b/mainpage.html
@@ -21,14 +21,14 @@
 
   <body>
     <header>
-          <div class="header">
-            <img src="img/logo/Reservia.svg" class="logo" alt="Reservia">
-            <div class="header-right">
-              <a class="active" href="#hebergements">Hébergements</a>
-              <a href="#activite">Activités</a>
-              <a class="subscribe" href="#sinscrire">S'inscrire</a>
-            </div>
-          </div>
+      <div class="header">
+        <img src="img/logo/Reservia.svg" class="logo" alt="Reservia" />
+        <div class="header-right">
+          <a class="active" href="#hebergements">Hébergements</a>
+          <a href="#activite">Activités</a>
+          <a class="subscribe" href="#sinscrire">S'inscrire</a>
+        </div>
+      </div>
       <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
       <p>En pleins centre ville ou en pleine nature</p>
     </header>
@@ -43,120 +43,90 @@
       <div class="contenairbtn">
         <p>Filtres</p>
 
-        <button class="btn"><i class="fas fa-money-bill-wave"></i>Économique</button>
+        <button class="btn">
+          <i class="fas fa-money-bill-wave"></i>Économique
+        </button>
         <button class="btn"><i class="fas fa-child"></i>Familial</button>
         <button class="btn"><i class="fas fa-heart"></i>Romantique</button>
         <button class="btn"><i class="fas fa-dog"></i>Économique</button>
       </div>
       <div class="attention">
-        <i class="fas fa-info-circle">
-          Plus de 500 logements sont disponibles dans cette ville</i
-        >
+        <i class="fas fa-info-circle"></i>
+        Plus de 500 logements sont disponibles dans cette ville
       </div>
     </section>
-    <div class="mainbresult">
+    <div class="mainresult">
       <section class="center">
-        <h1>Hébergement à Marseille</h1>
+        <h1 class="resulttitle">Hébergement à Marseille</h1>
 
-        <div class="hotelresult">
-          <a href="img/medium/aubergecannebiere_medium.jpg" target="_blank"
-            ><img
-              src="img/small/aubergecannebiere_small.jpg"
-              alt="Auberge de la Cannebière"
-          /></a>
-          <p>
-            Auberge la Cannebière <br />
-            Nuit à partir de 25€
-          </p>
+        <div class="card1">
+          <img src="img/medium/aubergecannebiere_medium.jpg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Auberge la Cannebière</h4>
+            <p>Nuit à partir 25€</p>
+          </div>
         </div>
-        <div class="hotelresult">
-          <a href="img/medium/hotelduport_medium.jpg" target="_blank"
-            ><img src="img/small/hotelduport_small.jpg" alt="Hôtel du port"
-          /></a>
-          <p>
-            Hôtel du port <br />
-            Nuit à partir de 52€
-          </p>
+        <div class="card1">
+          <img src="img/medium/hotelduport_medium.jpg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Hôtel du port</h4>
+            <p>Nuit à partir 52€</p>
+          </div>
         </div>
-        <div class="hotelresult">
-          <a href="img/medium/hotellesmouettes_medium.jpg" target="_blank"
-            ><img
-              src="img/small/hotellesmouettes_small.jpg"
-              alt="Hôtel les mouettes"
-          /></a>
-          <p>
-            Hôtel les mouettes <br />
-            Nuit à partir de 76€
-          </p>
+        <div class="card1">
+          <img src="img/medium/hotellesmouettes_medium.jpg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Hôtel Les mouettes</h4>
+            <p>Nuit à partir 76€</p>
+          </div>
         </div>
-        <div class="hotelresult">
-          <a href="img/medium/hoteldelamer_medium.jpg" target="_blank"
-            ><img src="img/small/hoteldelamer_small.jpg" alt="Hôtel de la mer"
-          /></a>
-          <p>
-            Hôtel la mer <br />
-            Nuit à partir de 46€
-          </p>
+        <div class="card1">
+          <img src="img/medium/hoteldelamer_medium.jpg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Hôtel de la mer</h4>
+            <p>Nuit à partir 46€</p>
+          </div>
         </div>
-        <div class="hotelresult">
-          <a href="img/medium/aubergelepanier_medium.jpg" target="_blank"
-            ><img
-              src="img/small/aubergelepanier_small.jpg"
-              alt="Auberge Le Panier"
-          /></a>
-          <p>
-            Auberge Le Panier <br />
-            Nuit à partir de 23€
-          </p>
+        <div class="card1">
+          <img src="img/medium/aubergelepanier_medium.jpg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Auberge Le Panier</h4>
+            <p>Nuit à partir 23€</p>
+          </div>
         </div>
-        <div class="hotelresult">
-          <a href="img/medium/hotelchezamina_medium.jpg" target="_blank"
-            ><img
-              src="img/small/hotelchezamina_small.jpg"
-              alt="Hôtel chez Amina"
-          /></a>
-          <p>
-            Hôtel chez Amina <br />
-            Nuit à partir de 96€
-          </p>
+        <div class="card1">
+          <img src="img/medium/hotelchezamina_medium.jpg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Hôtel chez Amina</h4>
+            <p>Nuit à partir 96€</p>
+          </div>
         </div>
-        <a href="#">Afficher plus</a>
       </section>
       <section class="rightside">
         <h1>Les plus populaires</h1>
 
-        <div class="famous">
-          <a href="img/medium/hotellesoleildumatin_medium.jpg" target="_blank"
-            ><img
-              src="img/small/hotellesoleildumatin_small.jpg"
-              alt="Hôtel le soleil du matin"
-          /></a>
-          <p>
-            Hôtel le soleil du matin <br />
-            Nuit à partir de 128€
-          </p>
+        <div class="card2">
+          <img src="img/medium/hotellesoleildumatin_medium.jpg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Auberge le soleil du matin</h4>
+            <p>Nuit à partir 128€</p>
+          </div>
         </div>
-        <div class="famous">
-          <a href="img/medium/aucoeurdeleau_medium.jpg" target="_blank"
-            ><img
-              src="img/small/aucoeurdeleau_small.jpg"
-              alt="Au coeur de l'eau Chambres d'hôtes"
-          /></a>
-          <p>
-            Au coeur de l'eau Chambres d'hôtes <br />
-            Nuit à partir de 71€
-          </p>
+
+        <div class="card2">
+          <img src="img/medium/aucoeurdeleau_medium.jpg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Au coeur de l'eau Chambre d'hôtes</h4>
+            <p>Nuit à partir 71€</p>
+          </div>
         </div>
-        <div class="famous">
-          <a href="img/medium/hoteltoutbleuetblanc_medium.jpg" target="_blank"
-            ><img
-              src="img/small/hoteltoutbleuetblanc_small.jpg"
-              alt="Hôtel Tout bleu et Blanc"
-          /></a>
-          <p>
-            Hôtel Tout bleu et Blanc <br />
-            Nuit à partir de 68€
-          </p>
+
+        <div class="card2">
+          <img src="img/medium/hoteltoutbleuetblanc_medium.jpgg" alt="photo" />
+          <div class="roomcontainer">
+            <h4>Hôtel Tout bleu et Blanc</h4>
+            <p>Nuit à partir 68€</p>
+          </div>
         </div>
       </section>
     </div>
