--- a/mainpage.html
+++ b/mainpage.html
@@ -55,50 +55,75 @@
         Plus de 500 logements sont disponibles dans cette ville
       </div>
     </section>
-    <div class="mainresult">
-      <section class="center">
+    <div class="main-result">
+      <section class="mainsection">
         <h1 class="resulttitle">Hébergement à Marseille</h1>
-
-        <div class="card1">
-          <img class="pics1" src="img/medium/aubergecannebiere_medium.jpg" alt="photo" />
-          <div class="roomcontainer">
-            <h4>Auberge la Cannebière</h4>
-            <p>Nuit à partir 25€</p>
+        <div class="center">
+          <div class="card1">
+            <img
+              class="pics1"
+              src="img/medium/aubergecannebiere_medium.jpg"
+              alt="photo"
+            />
+            <div class="roomcontainer">
+              <h4>Auberge la Cannebière</h4>
+              <p>Nuit à partir 25€</p>
+            </div>
           </div>
-        </div>
-        <div class="card1">
-          <img class="pics1" src="img/medium/hotelduport_medium.jpg" alt="photo" />
-          <div class="roomcontainer">
-            <h4>Hôtel du port</h4>
-            <p>Nuit à partir 52€</p>
+          <div class="card1">
+            <img
+              class="pics1"
+              src="img/medium/hotelduport_medium.jpg"
+              alt="photo"
+            />
+            <div class="roomcontainer">
+              <h4>Hôtel du port</h4>
+              <p>Nuit à partir 52€</p>
+            </div>
           </div>
-        </div>
-        <div class="card1">
-          <img class="pics1" src="img/medium/hotellesmouettes_medium.jpg" alt="photo" />
-          <div class="roomcontainer">
-            <h4>Hôtel Les mouettes</h4>
-            <p>Nuit à partir 76€</p>
+          <div class="card1">
+            <img
+              class="pics1"
+              src="img/medium/hotellesmouettes_medium.jpg"
+              alt="photo"
+            />
+            <div class="roomcontainer">
+              <h4>Hôtel Les mouettes</h4>
+              <p>Nuit à partir 76€</p>
+            </div>
           </div>
-        </div>
-        <div class="card1">
-          <img class="pics1" src="img/medium/hoteldelamer_medium.jpg" alt="photo" />
-          <div class="roomcontainer">
-            <h4>Hôtel de la mer</h4>
-            <p>Nuit à partir 46€</p>
+          <div class="card1">
+            <img
+              class="pics1"
+              src="img/medium/hoteldelamer_medium.jpg"
+              alt="photo"
+            />
+            <div class="roomcontainer">
+              <h4>Hôtel de la mer</h4>
+              <p>Nuit à partir 46€</p>
+            </div>
           </div>
-        </div>
-        <div class="card1">
-          <img class="pics1" src="img/medium/aubergelepanier_medium.jpg" alt="photo" />
-          <div class="roomcontainer">
-            <h4>Auberge Le Panier</h4>
-            <p>Nuit à partir 23€</p>
+          <div class="card1">
+            <img
+              class="pics1"
+              src="img/medium/aubergelepanier_medium.jpg"
+              alt="photo"
+            />
+            <div class="roomcontainer">
+              <h4>Auberge Le Panier</h4>
+              <p>Nuit à partir 23€</p>
+            </div>
           </div>
-        </div>
-        <div class="card1">
-          <img class="pics1" src="img/medium/hotelchezamina_medium.jpg" alt="photo" />
-          <div class="roomcontainer">
-            <h4>Hôtel chez Amina</h4>
-            <p>Nuit à partir 96€</p>
+          <div class="card1">
+            <img
+              class="pics1"
+              src="img/medium/hotelchezamina_medium.jpg"
+              alt="photo"
+            />
+            <div class="roomcontainer">
+              <h4>Hôtel chez Amina</h4>
+              <p>Nuit à partir 96€</p>
+            </div>
           </div>
         </div>
       </section>
@@ -106,7 +131,11 @@
         <h1>Les plus populaires</h1>
 
         <div class="card2">
-          <img class="pics2" src="img/medium/hotellesoleildumatin_medium.jpg" alt="photo" />
+          <img
+            class="pics2"
+            src="img/medium/hotellesoleildumatin_medium.jpg"
+            alt="photo"
+          />
           <div class="roomcontainer">
             <h4>Auberge le soleil du matin</h4>
             <p>Nuit à partir 128€</p>
@@ -114,7 +143,11 @@
         </div>
 
         <div class="card2">
-          <img class="pics2" src="img/medium/aucoeurdeleau_medium.jpg" alt="photo" />
+          <img
+            class="pics2"
+            src="img/medium/aucoeurdeleau_medium.jpg"
+            alt="photo"
+          />
           <div class="roomcontainer">
             <h4>Au coeur de l'eau Chambre d'hôtes</h4>
             <p>Nuit à partir 71€</p>
@@ -122,7 +155,11 @@
         </div>
 
         <div class="card2">
-          <img class="pics2" src="img/medium/hoteltoutbleuetblanc_medium.jpg" alt="photo" />
+          <img
+            class="pics2"
+            src="img/medium/hoteltoutbleuetblanc_medium.jpg"
+            alt="photo"
+          />
           <div class="roomcontainer">
             <h4>Hôtel Tout bleu et Blanc</h4>
             <p>Nuit à partir 68€</p>
