--- a/mainpage.html
+++ b/mainpage.html
@@ -68,6 +68,11 @@
             <div class="roomcontainer">
               <h4>Auberge la Cannebière</h4>
               <p>Nuit à partir 25€</p>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
             </div>
           </div>
           <div class="card1">
