--- a/mainpage.html
+++ b/mainpage.html
@@ -29,8 +29,10 @@
           <a class="subscribe" href="#sinscrire">S'inscrire</a>
         </div>
       </div>
+     
       <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
       <p>En pleins centre ville ou en pleine nature</p>
+     
     </header>
 
     <section>
@@ -57,7 +59,7 @@
     </section>
     <div class="main-result">
       <section class="mainsection">
-        <h1 class="resulttitle">Hébergement à Marseille</h1>
+        <h1 class="result-title">Hébergement à Marseille</h1>
         <div class="center">
           <div class="card1">
             <img
@@ -84,6 +86,11 @@
             <div class="roomcontainer">
               <h4>Hôtel du port</h4>
               <p>Nuit à partir 52€</p>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
             </div>
           </div>
           <div class="card1">
@@ -95,6 +102,11 @@
             <div class="roomcontainer">
               <h4>Hôtel Les mouettes</h4>
               <p>Nuit à partir 76€</p>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
             </div>
           </div>
           <div class="card1">
@@ -106,6 +118,11 @@
             <div class="roomcontainer">
               <h4>Hôtel de la mer</h4>
               <p>Nuit à partir 46€</p>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
+              <span class="fa fa-star"></span>
             </div>
           </div>
           <div class="card1">
@@ -117,6 +134,11 @@
             <div class="roomcontainer">
               <h4>Auberge Le Panier</h4>
               <p>Nuit à partir 23€</p>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star"></span>
             </div>
           </div>
           <div class="card1">
@@ -128,9 +150,15 @@
             <div class="roomcontainer">
               <h4>Hôtel chez Amina</h4>
               <p>Nuit à partir 96€</p>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
+              <span class="fa fa-star checked"></span>
             </div>
           </div>
         </div>
+        <a class="title-bottom"href="#">Afficher plus</a>
       </section>
       <section class="rightside">
         <h1>Les plus populaires</h1>
@@ -141,7 +169,7 @@
             src="img/medium/hotellesoleildumatin_medium.jpg"
             alt="photo"
           />
-          <div class="roomcontainer">
+          <div class="room-container-2">
             <h4>Auberge le soleil du matin</h4>
             <p>Nuit à partir 128€</p>
           </div>
@@ -153,7 +181,7 @@
             src="img/medium/aucoeurdeleau_medium.jpg"
             alt="photo"
           />
-          <div class="roomcontainer">
+          <div class="room-container-2">
             <h4>Au coeur de l'eau Chambre d'hôtes</h4>
             <p>Nuit à partir 71€</p>
           </div>
@@ -165,7 +193,7 @@
             src="img/medium/hoteltoutbleuetblanc_medium.jpg"
             alt="photo"
           />
-          <div class="roomcontainer">
+          <div class="room-container-2">
             <h4>Hôtel Tout bleu et Blanc</h4>
             <p>Nuit à partir 68€</p>
           </div>
