--- a/mainpage.html
+++ b/mainpage.html
@@ -160,7 +160,10 @@
         <a class="title-bottom" href="#">Afficher plus</a>
       </section>
       <section class="rightside">
+        <div class="result-title-2">
         <h1>Les plus populaires</h1>
+        <i class="fas fa-chart-line"></i>
+        </div>
 
         <div class="card2">
           <img
