--- a/mainpage.html
+++ b/mainpage.html
@@ -34,7 +34,7 @@
       <p>En pleins centre ville ou en pleine nature</p>
     </header>
 
-    <section>
+    <section class="search-section">
       <div class="search">
         <i class="fas fa-map-marker-alt"></i>
 
