media queries avancement

--- a/mainpage.html
+++ b/mainpage.html
@@ -25,13 +25,14 @@
         <img src="img/logo/Reservia.svg" class="logo" alt="Reservia" />
         <div class="header-right">
           <a class="active" href="#hebergements">Hébergements</a>
-          <a href="#activite">Activités</a>
+          <a class="activite" href="#activite">Activités</a>
           <a class="subscribe" href="#sinscrire">S'inscrire</a>
+
         </div>
       </div>
 
-      <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-      <p>En pleins centre ville ou en pleine nature</p>
+      <h1 class="h1-header">Trouvez votre hébergement pour des vacances de rêve</h1>
+      <p class="p-header">En pleins centre ville ou en pleine nature</p>
     </header>
 
     <section class="search-section">
