search mobile done

--- a/mainpage.html
+++ b/mainpage.html
@@ -48,9 +48,7 @@
       <div class="contenairbtn">
         <p>Filtres</p>
 
-        <button class="btn">
-          <i class="fas fa-money-bill-wave"></i>Économique
-        </button>
+        <button class="btn"><i class="fas fa-money-bill-wave"></i>Économique</button>
         <button class="btn"><i class="fas fa-child"></i>Familial</button>
         <button class="btn"><i class="fas fa-heart"></i>Romantique</button>
         <button class="btn"><i class="fas fa-dog"></i>Économique</button>
