--- a/mainpage.html
+++ b/mainpage.html
@@ -3,9 +3,12 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
+    
     <link rel="icon" type="image/png" href="img/logo/favicon.ico" />
 
     <title>Reservia</title>
+    <meta name="viewport" content="width=device-width">
+
     <meta name="description" content="Reservia" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style-mobile.css" />
@@ -31,10 +34,10 @@
         </div>
       </div>
 
-      <h1 class="h1-header">
+      <h1>
         Trouvez votre hébergement pour des vacances de rêve
       </h1>
-      <p class="p-header">En pleins centre ville ou en pleine nature</p>
+      <p>En pleins centre ville ou en pleine nature</p>
     </header>
 
     <section class="search-section">
