--- a/mainpage.html
+++ b/mainpage.html
@@ -9,6 +9,7 @@
     <title>Reservia</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Reservia" />
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style-header.css" />
     <link rel="stylesheet" href="style-search.css" />
