--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="CSS/style-search.css" />
     <link rel="stylesheet" href="CSS/style-main-result.css" />
     <link rel="stylesheet" href="CSS/style-activite.css" />
+    <link rel="stylesheet" href="CSS/style-tabs.css" />
     <link rel="stylesheet" href="CSS/style-mobile.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
