--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    
+
     <link rel="icon" type="image/png" href="img/logo/favicon.ico" />
 
     <title>Reservia</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Reservia" />
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/style.css" />
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="CSS/style-search.css" />
     <link rel="stylesheet" href="CSS/style-main-result.css" />
     <link rel="stylesheet" href="CSS/style-activite.css" />
+    <link rel="stylesheet" href="CSS/style-tabs.css" />
     <link rel="stylesheet" href="CSS/style-mobile.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -38,9 +39,7 @@
         </div>
       </div>
 
-      <h1>
-        Trouvez votre hébergement pour des vacances de rêve
-      </h1>
+      <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
       <p>En pleins centre ville ou en pleine nature</p>
     </header>
 
