correction mise en page

--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
     <link rel="stylesheet" href="CSS/style-tabs.css" />
     <link rel="stylesheet" href="CSS/style-mobile.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&amp;display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/fc126c8c18.js"
       crossorigin="anonymous"
     ></script>
   </head>
-
+<div class="container">
   <body>
     <header>
       <div class="header">
@@ -83,7 +80,7 @@
               />
               <div class="roomcontainer">
                 <h4>Auberge la Cannebière</h4>
-                <p>Nuit à partir 25€</p>
+                <p>Nuit à partir <strong>25€</strong></p>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -102,7 +99,7 @@
               />
               <div class="roomcontainer">
                 <h4>Hôtel du port</h4>
-                <p>Nuit à partir 52€</p>
+                <p>Nuit à partir <strong>52€</strong></p>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -121,7 +118,7 @@
               />
               <div class="roomcontainer">
                 <h4>Hôtel Les mouettes</h4>
-                <p>Nuit à partir 76€</p>
+                <p>Nuit à partir <strong>76€</strong></p>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -140,7 +137,7 @@
               />
               <div class="roomcontainer">
                 <h4>Hôtel de la mer</h4>
-                <p>Nuit à partir 46€</p>
+                <p>Nuit à partir <strong>46€</strong></p>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -159,7 +156,7 @@
               />
               <div class="roomcontainer">
                 <h4>Auberge Le Panier</h4>
-                <p>Nuit à partir 23€</p>
+                <p>Nuit à partir <strong>23€</strong></p>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -178,7 +175,7 @@
               />
               <div class="roomcontainer">
                 <h4>Hôtel chez Amina</h4>
-                <p>Nuit à partir 96€</p>
+                <p>Nuit à partir <strong>96€</strong></p>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -205,7 +202,7 @@
           />
           <div class="room-container-2">
             <h4>Hôtel le soleil du matin</h4>
-            <p>Nuit à partir 128€</p>
+            <p>Nuit à partir <strong>128€</strong></p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -222,7 +219,7 @@
           />
           <div class="room-container-2">
             <h4>Au coeur de l'eau Chambre d'hôtes</h4>
-            <p>Nuit à partir 71€</p>
+            <p>Nuit à partir <strong>71€</strong></p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -239,7 +236,7 @@
           />
           <div class="room-container-2">
             <h4>Hôtel Tout bleu et Blanc</h4>
-            <p>Nuit à partir 68€</p>
+            <p>Nuit à partir <strong>68€</strong></p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -349,4 +346,5 @@
       </footer>
     </div>
   </body>
+  </div>
 </html>
